--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -969,11 +969,11 @@ body .stats-wrapper .cases-wrapper #kontakt {
 }
 
 body .stats-wrapper .cases-wrapper #mail {
-  background-color: rgba(1, 128, 1, 0.521);
+  background-color: rgba(1, 128, 1, 0.721);
 }
 
 body .stats-wrapper .cases-wrapper #pd {
-  background-color: rgba(1, 128, 1, 0.621);
+  background-color: rgba(1, 128, 1, 0.921);
 }
 
 body .stats-wrapper .cases-wrapper #oferta {
@@ -982,4 +982,17 @@ body .stats-wrapper .cases-wrapper #oferta {
 
 body .stats-wrapper .cases-wrapper #umowa {
   background-color: green;
+}
+
+body .stats-wrapper .cases-wrapper #bb {
+  background-color: rgba(0, 0, 0, 0.582);
+}
+
+body .stats-wrapper .sum-div {
+  background: rgba(245, 245, 245, 0.79);
+  padding: 10px;
+}
+
+body .stats-wrapper .sum-div span {
+  font-weight: bolder;
 }
