stats full ready v1 test run

--- a/public/stylesheets/parts/stats.css
+++ b/public/stylesheets/parts/stats.css
@@ -115,3 +115,8 @@
 .stats-wrapper .sum-div span {
   font-weight: bolder;
 }
+
+.stats-wrapper .sum-div span.percent {
+  margin-left: 10px;
+  color: #0d4b67;
+}
