--- a/public/stylesheets/parts/stats.scss
+++ b/public/stylesheets/parts/stats.scss
@@ -116,6 +116,11 @@
         span {
             font-weight: bolder;
         }
+
+        span.percent {
+            margin-left: 10px;
+            color: rgb(13, 75, 103);
+        }
     }
 
 
