--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -996,3 +996,8 @@ body .stats-wrapper .sum-div {
 body .stats-wrapper .sum-div span {
   font-weight: bolder;
 }
+
+body .stats-wrapper .sum-div span.percent {
+  margin-left: 10px;
+  color: #0d4b67;
+}
