--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -927,6 +927,12 @@ body .stats-wrapper .cases-wrapper .stats-case .case-name {
   cursor: context-menu;
 }
 
+body .stats-wrapper .cases-wrapper .stats-case .case-percent {
+  flex-grow: 2;
+  padding: 2px;
+  font-weight: bolder;
+}
+
 body .stats-wrapper .cases-wrapper .stats-case .case-description {
   display: none;
   position: absolute;
