--- a/public/stylesheets/parts/stats.scss
+++ b/public/stylesheets/parts/stats.scss
@@ -44,6 +44,12 @@
                 cursor: context-menu;
             }
 
+            .case-percent {
+                flex-grow: 2;
+                padding: 2px;
+                font-weight: bolder;
+            }
+
             .case-description {
                 display: none;
                 position: absolute;
