stats css fix and change rate on table

--- a/public/stylesheets/parts/stats.css
+++ b/public/stylesheets/parts/stats.css
@@ -113,6 +113,11 @@
   background-color: rgba(0, 0, 0, 0.582);
 }
 
+.stats-wrapper .cases-wrapper #bb span.case-percent,
+.stats-wrapper .cases-wrapper #bb span.case-name {
+  color: white;
+}
+
 .stats-wrapper .sum-div {
   background: rgba(245, 245, 245, 0.79);
   padding: 10px;
