--- a/views/table.pug
+++ b/views/table.pug
@@ -5,11 +5,11 @@ block content
   form(method='post')
     button(type='submit' class='logout-btn') Wyloguj
   h1(class='table-heading') E-Tablica 
-  //- div(class="christmas-time")
-  //-   p(class="time-to") Nowy rok za:
-  //-     span(class="days-christmas")
-  //-     span(class="hours-christmas")
-  //-     span(class="minutes-christmas")
+  div(class="christmas-time")
+    p(class="time-to") Wielkanoc za:
+      span(class="days-christmas")
+      span(class="hours-christmas")
+      span(class="minutes-christmas")
   div(class="table-wrapper")
   
     each item in dataModDay     
