--- a/public/stylesheets/parts/_nav.scss
+++ b/public/stylesheets/parts/_nav.scss
@@ -36,8 +36,9 @@ div.menu-mobile {
     }
 
     // background: rgb(37, 157, 42);
-    background: rgba(154, 12, 12, 0.11);
+    background: rgba(74, 67, 67, 0.75);
     color: white;
+    border-radius: 10px;
 
     ul {
         display: flex;
