--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -11,7 +11,7 @@ body {
     padding: 50px;
     font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
     // up świąteczny 
-    background: url('../images/photovoltaic1.png');
+    background: url('../images/spring.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
