--- a/views/layout.pug
+++ b/views/layout.pug
@@ -32,7 +32,7 @@ html
         li(class="male-link") 
           a(href="/panel/table")  Męski
         li(class="christmas-link") 
-          a(href="/panel/table")  Świąteczny
+          a(href="/panel/table")  Wiosenny =)
         li(class="motive-link") Motywy  
           i(class="far fa-arrow-alt-circle-down arrow-motive")
 
