basic engine of calc ready

--- a/public/stylesheets/parts/_calc.css
+++ b/public/stylesheets/parts/_calc.css
@@ -82,3 +82,11 @@
   margin-top: 0;
   font-size: 15px;
 }
+
+.wrapper .value-of-calc-data {
+  font-weight: bolder;
+}
+
+.wrapper .marge-mass-span {
+  color: green;
+}
