--- a/public/stylesheets/parts/_calc.scss
+++ b/public/stylesheets/parts/_calc.scss
@@ -82,4 +82,11 @@
         font-size: 15px;
     }
 
+    .value-of-calc-data {
+        font-weight: bolder;
+    }
+
+    .marge-mass-span {
+        color: green;
+    }
 }
