calc marge works fine with year 2021 in select

--- a/public/stylesheets/parts/_calc.css
+++ b/public/stylesheets/parts/_calc.css
@@ -90,3 +90,11 @@
 .wrapper .marge-mass-span {
   color: green;
 }
+
+.wrapper .when-option-2020 {
+  display: none;
+}
+
+.wrapper .when-option-2019 {
+  display: none;
+}
