--- a/public/stylesheets/parts/_calc.scss
+++ b/public/stylesheets/parts/_calc.scss
@@ -89,4 +89,13 @@
     .marge-mass-span {
         color: green;
     }
+
+    .when-option-2020 {
+        display: none;
+    }
+
+    .when-option-2019 {
+        display: none;
+    }
+
 }
