--- a/views/panel.pug
+++ b/views/panel.pug
@@ -5,32 +5,45 @@ block content
     button(type='submit' class='logout-btn') Wyloguj
   
   div(class='wrapper')
-    h3 Ofertomat Energa v. 1.0 Jedna cena (C11, C21 itp.)
-    p(class="ofe-description") Proste narzędzie pomagające przygotować ofertę
-    p(class="ofe-description") Minimalna masa marży to 300 zł!
+    h3 Ofertomat v. 1.0   
+    p(class="alert alert-danger") Minimalna masa marży to 300 zł!
+    p(class="alert alert-warning") Wyliczona wartość marży jest orientacyjna, jeśli umowa obejmuje pare lat wylicz dokładną masę w oparciu o cennik! Zapewne będzie większa =)
     div
       label(for="tariff") Grupa taryfowa: 
-      input(id="tariff" type='text' placeholder="np. C11")
+      select(id="tariff")
+        option(value="C11") C11
+        option(value="C12a") C12a
+        option(value="C12b") C12b
+        option(value="C21") C21
+        option(value="C22a") C22a        
+        option(value="C22b") C22b        
     div
       label(for="endOfAgreement") Kiedy kończy się umowa:
-      input(id="endOfAgreement" type="text" placeholder="np. 2021")
-      span(class="alert" id="alertEndOfAgreement")
+      select(id="endOfAgreement")
+        option(class="option-2021" value=2021) 2021
+        option(class="option-2020" value=2020) 2020
+        option(class="option-2019" value=2019) 2019
     div
       label(for="priceNow") Cena aktualna klienta:
       input(id="priceNow" type="text" placeholder="np. 382")
-      span(class="alert" id="alertPriceNow")
+      
     div
-      label(for="priceInTariff") Cena w cenniku dla taryfy:
-      input(id="priceInTariff" type="text" placeholder="np. 300")
-      span(class="alert" id="alertPriceInTariff")    
+      label(for="priceInTariff") Cena w cenniku na 2022:
+      input(id="priceInTariff2022" type="text" placeholder="np. 300")
+    div(class="when-option-2020")
+      label(for="priceInTariff2021") Cena w cenniku na 2021:
+      input(id="priceInTariff2021" type="text" placeholder="np. 280" value=0)
+    div(class="when-option-2019")
+      label(for="priceInTariff2020") Cena w cenniku na 2020:
+      input(id="priceInTariff2020" type="text" placeholder="np. 274" value=0)     
     div
       label(for="wear") Zużycie:
       input(id="wear" type="text" placeholder="np. 18.3")
-      span(class="alert" id="alertWear")
+      
     div
       label(for="proposePrice") Twoja propozycja:
       input(id="proposePrice" type="text" placeholder="380")
-      span(class="alert" id="alertProposePrice")
+      
     button(id="btnCalc") Przelicz
     p(class="note") Notatka:
     p(id="summaryCalc")
