--- a/views/layout.pug
+++ b/views/layout.pug
@@ -12,7 +12,7 @@ html
     nav(class='main-nav') 
       ul
         li
-          a(href="/panel") Kalkulator                 
+          a(href="/panel") Ofertomat                 
         li 
           a(href="/panel/experts")  Handlowcy  
         li 
