--- a/public/stylesheets/parts/_calc.css
+++ b/public/stylesheets/parts/_calc.css
@@ -1,6 +1,7 @@
+@import url("https://fonts.googleapis.com/css?family=Baloo+2:400,700&display=swap&subset=latin-ext");
 .wrapper {
   width: 800px;
-  margin: 50px auto 0;
+  margin: 25px auto 0;
   background: rgba(173, 216, 230, 0.74);
   padding: 20px;
   border: 3px solid black;
@@ -16,6 +17,8 @@
 
 .wrapper input {
   font-size: 20px;
+  text-align: center;
+  width: 100px;
 }
 
 .wrapper p {
@@ -23,64 +26,9 @@
   line-height: 100%;
 }
 
-.wrapper button {
-  display: inline-block;
-  width: 100px;
-  box-sizing: border-box;
-  font-size: 20px;
-  padding: 3px;
-  background-color: transparent;
-  border: 1px solid black;
-  cursor: pointer;
-}
-
-.wrapper button:hover {
-  font-weight: bolder;
-}
-
 .wrapper #select {
   margin-top: 10px;
   font-size: 20px;
-}
-
-.wrapper #yearIn,
-.wrapper #power,
-.wrapper #monthCost,
-.wrapper #same-energy,
-.wrapper #changed-energy {
-  color: green;
-  font-weight: bolder;
-}
-
-.wrapper #same-energy.active,
-.wrapper #changed-energy.active {
-  display: inline-block;
-  padding: 2px 4px;
-  border: 2px solid blue;
-}
-
-.wrapper #creditPar {
-  color: green;
-  font-weight: bolder;
-  margin-bottom: 0;
-}
-
-.wrapper #creditPar .orient {
-  text-decoration: underline;
-}
-
-.wrapper #save-money {
-  margin-top: 10px;
-}
-
-.wrapper #save-money .saves {
-  margin-bottom: 0;
-}
-
-.wrapper #save-money .saves-desc,
-.wrapper .credit-desc {
-  margin-top: 0;
-  font-size: 15px;
 }
 
 .wrapper .value-of-calc-data {
@@ -97,4 +45,31 @@
 
 .wrapper .when-option-2019 {
   display: none;
+}
+
+.wrapper div label {
+  margin-right: 10px;
+  font-family: 'Baloo 2', cursive;
+}
+
+.wrapper .btn-wrapper {
+  text-align: center;
+}
+
+.wrapper .btn-wrapper #btnCalc {
+  width: 120px;
+}
+
+.wrapper p.note {
+  text-align: center;
+  font-family: 'Baloo 2', cursive;
+  font-weight: bolder;
+  font-size: 1.5rem;
+  margin-top: 15px;
+  border-bottom: 2px solid brown;
+  padding-bottom: 10px;
+}
+
+.wrapper p#summaryCalc {
+  padding: 10px;
 }
