chrome ofertomat fix

--- a/views/panel.pug
+++ b/views/panel.pug
@@ -21,6 +21,8 @@ block content
         option(class="option-2021" value=2021) 2021
         option(class="option-2020" value=2020) 2020
         option(class="option-2019" value=2019) 2019
+      //- input(id="endOfAgreement" value="2021")  
+      
     div
       label(for="priceNow") Cena aktualna klienta: 
       input(id="priceNow" type="text" placeholder="np. 382")
