small motive-link css update

--- a/public/stylesheets/parts/_motive.css
+++ b/public/stylesheets/parts/_motive.css
@@ -44,6 +44,7 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   font-weight: bolder;
+  cursor: pointer;
 }
 
 .change-motive.active {
