--- a/public/stylesheets/parts/_motive.scss
+++ b/public/stylesheets/parts/_motive.scss
@@ -45,6 +45,7 @@
             -webkit-text-fill-color:
                 transparent;
             font-weight: bolder;
+            cursor: pointer;
         }
     }
 }
