--- a/public/stylesheets/parts/_calc.css
+++ b/public/stylesheets/parts/_calc.css
@@ -74,3 +74,29 @@
   background-color: bisque;
   border-radius: 10px;
 }
+
+.wrapper .change-price-panel {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: coral;
+  padding: 15px;
+  border: 2px solid brown;
+  border-radius: 5px;
+  text-align: center;
+  display: none;
+  transition: .5s;
+}
+
+.wrapper .change-price-panel .change-price-close {
+  position: absolute;
+  bottom: 6px;
+  right: 3px;
+  cursor: pointer;
+  transition: .3s;
+}
+
+.wrapper .change-price-panel .change-price-close:hover {
+  transform: scale(1.2);
+}
