--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -315,6 +315,32 @@ body .wrapper p#summaryCalc {
   border-radius: 10px;
 }
 
+body .wrapper .change-price-panel {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: coral;
+  padding: 15px;
+  border: 2px solid brown;
+  border-radius: 5px;
+  text-align: center;
+  display: none;
+  transition: .5s;
+}
+
+body .wrapper .change-price-panel .change-price-close {
+  position: absolute;
+  bottom: 6px;
+  right: 3px;
+  cursor: pointer;
+  transition: .3s;
+}
+
+body .wrapper .change-price-panel .change-price-close:hover {
+  transform: scale(1.2);
+}
+
 body h1.experts-heading {
   text-align: center;
   margin-bottom: 5px;
