change redirect from login to ofertomat
also remove some code from index.js with i find unnecesary

--- a/public/stylesheets/parts/_calc.css
+++ b/public/stylesheets/parts/_calc.css
@@ -100,3 +100,8 @@
 .wrapper .change-price-panel .change-price-close:hover {
   transform: scale(1.2);
 }
+
+.wrapper .change-price-panel input {
+  border: none;
+  border-radius: 4px;
+}
